--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="src/index.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
   integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
   crossorigin="anonymous"></script>
   <!-- base module -->
-  <script type="module" src="scripts/index.js"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
